<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/background_second"
    android:orientation="vertical"
    tools:context=".SecondActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/weather_rainy"/>

    <TextView
        style="@style/MyMainTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/text_rainy"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/text_linear_layout"
        style="@style/MySecondTextStyle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_prev"
            style="@style/MyButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_size_normal"
            android:text="@string/btn_prev"
            app:layout_constraintDimensionRatio="1:1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next"
            style="@style/MyButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_size_normal"
            android:text="@string/btn_next"
            app:layout_constraintDimensionRatio="1:1" />
    </LinearLayout>
</LinearLayout>