<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_third"
    tools:context=".SecondActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/text_snowy"
        android:paddingTop="@dimen/padding_frame_image"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/weather_snowy" />

    <TextView
        style="@style/Theme.Lesson_17.MyMainTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/text_snowy" />

    <TextView
        style="@style/Theme.Lesson_17.MyMainTextStyle.MySecondTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/padding_frame_second_text"
        android:text="@string/text_frame_layout" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/padding_frame_button">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_prev"
            style="@style/MyButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_size_normal"
            android:text="@string/btn_prev"
            app:layout_constraintDimensionRatio="1:1" />
    </LinearLayout>
</FrameLayout>